--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "workspaces": [
     "packages/*"
   ],
-  "packageManager": "yarn@3.2.0",
+  "packageManager": "yarn@3.2.1",
   "engines": {
     "node": ">=14.0.0",
     "npm": "Please use yarn instead of NPM to install dependencies"
@@ -26,14 +26,14 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^5.0.9",
-    "lint-staged": "^10.5.4",
+    "lint-staged": "^13.0.3",
     "prettier": "~2.2.1",
     "ts-node": "^8.0.2",
-    "typescript": "^4.1.2"
+    "typescript": "^4.7.4"
   },
   "lint-staged": {
     "*.{js,ts,tsx}": [
-      "yarn run eslint --fix"
+      "yarn run eslint --fix --quiet"
     ]
   },
   "resolutions": {
