--- a/packages/files/package.json
+++ b/packages/files/package.json
@@ -33,7 +33,7 @@
   },
   "homepage": "https://github.com/neoxia/apoyo/tree/master/packages/files",
   "scripts": {
-    "test": "jest --verbose --runInBand",
+    "test": "jest --verbose --runInBand --passWithNoTests",
     "build": "tsup"
   },
   "devDependencies": {
@@ -42,7 +42,9 @@
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^26.0.23",
     "@types/node": "^14.18.21",
+    "@types/rimraf": "^3",
     "jest": "^26.4.2",
+    "rimraf": "^3.0.2",
     "ts-jest": "^26.3.0",
     "ts-node": "^8.0.2",
     "tsup": "^6.1.2",
