--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,7 +26,7 @@ jobs:
 
       - run: yarn test
         env:
-          AWS_S3_SERVER: fake_s3:4569
+          AWS_S3_SERVER: http://fake_s3:4569
 
       - name: Publish
         run: yarn workspaces foreach --no-private npm publish --tolerate-republish
