--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -31,7 +31,7 @@ jobs:
 
       - run: yarn test
         env:
-          AWS_S3_SERVER: fake_s3:4569
+          AWS_S3_SERVER: http://fake_s3:4569
 
     services:
       fake_s3:
