--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -16,16 +16,6 @@ jobs:
       matrix:
         node-version: [14.x]
 
-    services:
-      fake_s3:
-        image: lphoward/fake-s3
-        ports:
-          - 4569:4569
-      fake_azure:
-        image: mcr.microsoft.com/azure-storage/azurite
-        ports:
-          - 10000:10000
-
     steps:
       - uses: actions/checkout@v3.0.2
 
@@ -39,6 +29,7 @@ jobs:
 
       - run: yarn build
 
+      - run: docker-compose up -d
       - run: yarn test
-        env:
-          AWS_S3_SERVER: http://localhost:4569
+      - run: docker-compose down
+
